fixes alignement | E1-565 E1-589

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/pagenavigation.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/pagenavigation.scss
@@ -94,9 +94,10 @@
       }
       &:hover {
         color: $main-green;
-        @include respond-to-max($tablet) {
-          background-color: transparent;
-        }
+        background-color: transparent;
+      }
+      &:focus {
+        background-color: transparent;
       }
     }
 
